--- a/index.html
+++ b/index.html
@@ -5,14 +5,71 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Spotify Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
+
+ <!--<iteration 1: Navbar-->
   <body>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
+    <header id="header">
+      <img id="logo" src="./images/spotify-logo.png" alt="Spotify Logo">
+      <nav id="nav-bar">
+        <ul class="menu-nav">
+          <li><a href="#premium">Premium</a></li>
+          <li><a href="#discover">Discover</a></li>
+          <li><a href="#help">Help</a></li>
+          <li><a href="#download">Download</a></li>
+        </ul>
+      </nav>
+    </header> 
+
+    <!--Iteration 2: Large image background + text-->  
+    <section id="main-photo">
+      <h1>Music for everyone.</h1>
+      <h2>Spotify is now free on mobile, tablet and computer. Listen to the right music, wherever you are.</h2>
+    </section>
+
+    <!--Iteration 3: What is on Spotify section-->
+    <main>
+      <h2>What’s on Spotify?</h2>
+      <section id="spotify-features">
+        <article>
+          <img src="./images/music-icon.png" alt="Speaker Icon">
+          <h3>Millions of Songs</h3>
+          <p>There are millions of songs on Spotify</p> 
+        </article>
+        <article>
+          <img src="./images/high-quality-icon.png" alt="HD Music Icon">
+          <h3>HD Music</h3>
+          <p>Listen to music as if you were listening live</p>
+        </article>
+        <article>
+          <img src="./images/devices-icon.png" alt="Devices Icon">
+          <h3>Stream Everywhere</h3>
+          <p>Stream music on your smartphone, tablet or computer</p>
+        </article>
+      </section>
+    </main>
+
+    <!--Iteration 4: The green section-->
+    <section id="green-section">
+      <div class="column">
+       <h2>It’s as yeezy as Kanye West.</h2> 
+      <article>
+        <h3>Search</h3>
+        <p>Know what you want to listen to? <br> search and hit play.</p>
+      </article>
+      <article>
+        <h3>Browse</h3>
+        <p>Check out the latest charts, brand new releases and great playlists for right now.</p>
+      </article>
+      <article>
+        <h3>Discover</h3>
+        <p>Enjoy new music every Monday with your own personal playlist. Or sit back and enjoy Radio.</p>
+      </article>
+      </div>
+      <img id="logo-white" src="./images/spotify-icon-white.png" alt="spotify-logo-white">
+      <img id="kanye" src="./images/spotify-app.jpg" alt="spotify-app">
+    </section> 
+    
   </body>
 </html>
